1st Step Flexbox Header Layout

--- a/index.html
+++ b/index.html
@@ -12,4 +12,15 @@ title: Your New Jekyll Site
   </ul>
 </div> -->
 
- {% include arkar.html %}
+<div class="home-wrap">
+	{% include header.html %}
+
+	<div class="home-section">
+		<!-- all the sections are here... -->
+		<div style="height: 2000px">
+			
+		</div>
+	</div>
+
+</div>
+ 
